# LoopyMSE

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSES.md  NOTICES.md  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
assets/: README.md  loopymse.ini
src/: .clang-format  BUILDING.md  CMakeLists.txt
src/common/: CMakeLists.txt  imgwriter.cpp  imgwriter.h  wordops.h
src/core/: CMakeLists.txt  cart.cpp  cart.h  config.cpp  config.h  loopy_io.cpp  loopy_io.h  system.cpp  system.h
src/core/sh2/: sh2.cpp  sh2_bus.cpp  sh2_bus.h  sh2_interpreter.cpp  sh2_interpreter.h  sh2_local.h
src/core/sh2/peripherals/: sh2_dmac.cpp  sh2_dmac.h  sh2_ocpm.cpp  sh2_ocpm.h  sh2_pfc.cpp  sh2_pfc.h  sh2_serial.cpp  sh2_timers.cpp
src/expansion/: CMakeLists.txt  expansion.cpp  expansion.h
src/expansion/msm665x/: audio.c  audio.h  msm665x.cpp  msm665x.h
src/input/: input.cpp  input.h
src/log/: CMakeLists.txt  log.cpp  log.h
src/printer/: CMakeLists.txt  printer.cpp  printer.h
src/sdl/: CMakeLists.txt  Info.plist  config.h  macos.icns  main.cpp  options.cpp  options.h  windows.rc
src/sound/: CMakeLists.txt  loopysound.cpp  loopysound.h  sound.cpp  sound.h
src/video/: CMakeLists.txt  render.cpp  render.h  video.cpp  video.h
