cmake_minimum_required (VERSION 3.12)
cmake_policy (SET CMP0167 NEW)

set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)
set (VCPKG_USE_STATIC_LIBS ON)
set (VCPKG_USE_STATIC_RUNTIME ON)

project (LoopyMSE LANGUAGES C CXX ASM)
set (PROJECT_VERSION 0.5.1)
set (PROJECT_DESCRIPTION "Loopy My Seal Emulator")
set (PROJECT_HOMEPAGE_URL "https://github.com/LoopyMSE/LoopyMSE")
set (PROJECT_ORG "PSI")

string (REPLACE "/DNDEBUG" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")

find_package (Boost REQUIRED COMPONENTS program_options)
find_package (SDL2 REQUIRED)

set (DIST_DIR ${CMAKE_BINARY_DIR}/dist)
set (ASSETS_DIR ${PROJECT_SOURCE_DIR}/assets)

add_subdirectory (src)